bff/deploy/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - protocol: TCP
      port: 8901
      targetPort: 8901
  selector:
    app: auth-service
  type: NodePort
