bff/deploy/config-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: config-service
  type: NodePort
