bff/deploy/discovery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-service
  type: NodePort
