bff/deploy/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
    - protocol: TCP
      port: 8900
      targetPort: 8900
  selector:
    app: gateway-service
  type: NodePort
