bff/deploy/profile-service.yml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  ports:
    - protocol: TCP
      port: 8902
      targetPort: 8902
  selector:
    app: profile-service
  type: NodePort
