bff/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /bff($|/)(.*)
            backend:
              serviceName: gateway-service
              servicePort: 8900
